# robocar_mospolytech

./: README.md
detect_tl/: package.xml  setup.cfg  setup.py
detect_tl/detect_tl/: publish_tl.py
lidar_localization_ros2/include/lidar_localization/: lidar_localization_component.hpp
lidar_localization_ros2/launch/: lidar_localization.launch.py
lidar_localization_ros2/param/: localization.yaml
lidar_localization_ros2/src/: lidar_localization_component.cpp
lidarslam_ros2/lidarslam/launch/: lidarslam.launch.py  lidarslam_tukuba.launch.py
lidarslam_ros2/lidarslam/param/: lidarslam.yaml  lidarslam_tukuba.yaml
lidarslam_ros2/lidarslam/rviz/: mapping.rviz
lidarslam_ros2/scanmatcher/src/: scanmatcher_component.cpp
robocross2023/: CMakeLists.txt  README.md  package.xml
robocross2023/Arduino/down_level/: down_level.ino
robocross2023/Arduino/encoderSketch2024V2/: encoderSketch2024V2.ino
robocross2023/Arduino/moveRobocross2024/: moveRobocross2024.ino
robocross2023/RB_UI/: img.qrc  main.py  main_.py  mainform.ui  my_map.pgm
robocross2023/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robocross2023/install/my_box_bot_gazebo/lib/my_box_bot_gazebo/: spawn_robot.py  teleop.py
robocross2023/install/my_box_bot_gazebo/share/my_box_bot_gazebo/: package.sh  package.xml
robocross2023/install/my_box_bot_gazebo/share/my_box_bot_gazebo/launch/: publish_urdf.launch.py  spawn_lidar.xml  spawn_robot_description.launch.py  spawn_robot_ros2.launch.xml  start_gazebo_simulation.launch.py  start_world.launch.py
robocross2023/install/my_box_bot_gazebo/share/my_box_bot_gazebo/models/autocar/: autocar.xacro  autocarlidar.urdf.xacro  model.sdf
robocross2023/install/my_box_bot_gazebo/share/my_box_bot_gazebo/models/autocar2/urdf/: ngeeann_av.urdf  ngeeann_av.xacro
robocross2023/install/my_box_bot_gazebo/share/my_box_bot_gazebo/models/prius/urdf/: prius.urdf
robocross2023/install/my_box_bot_gazebo/share/my_box_bot_gazebo/models/velodyne/urdf/: HDL-32E.urdf.xacro  HDL-32E.xacro
robocross2023/install/my_box_bot_gazebo/share/my_box_bot_gazebo/rviz/: view.rviz
robocross2023/install/my_box_bot_gazebo/share/my_box_bot_gazebo/worlds/: base.world  box_bot_empty.world  world_robocross.world
robocross2023/launch/: all_start.launch.py  bringup.launch.py  create_map.launch.py  localization.launch.py  path_move.launch.py  publish_urdf.launch.py  publish_urdf_real.launch.py  rviz.launch.py  spawn_lidar.xml  spawn_robot_description.launch.py  spawn_robot_ros2.launch.xml  start_gazebo_simulation.launch.py  start_gazebo_simulation_trafic.launch.py  start_nav.launch.py  start_world.launch.py  test.launch.py
robocross2023/maps/: map.yaml
robocross2023/models/autocar/: model.sdf
robocross2023/models/autocar/meshes/: spoiler_1.stl
robocross2023/models/autocar_real/: model.sdf
robocross2023/models/gazel/: model.sdf
robocross2023/models/gazel/meshes/: Next.stl  back1.stl  back2.stl  bl.stl  chassis_link3.stl  fl.stl  fr.stl  front1.stl  front2.stl
robocross2023/models/prius/urdf/: prius.sdf
robocross2023/models/velodyne/urdf/: HDL-32E.urdf  HDL-32E1.xacro
robocross2023/params/: car_params.yaml  nav_params.yaml
robocross2023/paths/: path1.csv
robocross2023/paths/old/: global_path.csv  path1.csv  path2.csv  testRAuto.csv
robocross2023/rviz/: view2.rviz
robocross2023/scripts/: calc_odom.py  calc_odom_sim.py  car_in_global_map.py  create_2d_map.cpp  create_path.py  get_param_from_ui.py  go_global_path.py  hybrid_a_star.py  mapping.cpp  mission_control.py  pcd_to_map.py  pure_pursuit.cpp  ser_move.py  serial_odom.py  test_r_auto.py  transforms.py
robocross2023/worlds/: base.world  real_robocross.world  robocross_trafic.world  world_robocross.world
robocross2023/worlds/PD/: MYWRLDa
robocross2023/worlds/PD/razmetka/: model.config  model.sdf
robocross2023/worlds/PD/razmetka/materials/scripts/: asphalt.material
velodyne/velodyne/launch/: velodyne-all-nodes-VLP32C-launch.py
velodyne/velodyne_driver/config/: VLP32C-velodyne_driver_node-params.yaml
velodyne/velodyne_pointcloud/: CMakeLists.txt  package.xml
(+4 files in other folders)
